[package]
name = "tmc2209"
version = "0.1.0"
edition = "2024"
authors = ["Ahsanu Amala"]
repository = "https://github.com/ahsanu123/RDC/TMC2209"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["tmc2209", "stepper motor driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/ahsanu123/RDC/tree/main/TMC2209"
# description = ""
# documentation = "https://docs.rs/max170xx"

[dependencies]
embedded-hal = "1.0.0"
quote = "1.0.40"
syn = "2.0.104"

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[[bin]]
name = "tmc2209_main"
path = "src/bin/tmc2209.rs"
